# Chess-AI

./: .gitignore  CMakeLists.txt  Chess AI.sln
Chess AI/Testing/: Testing.cpp
Chess AI/src/: main.cpp
src/: main.cpp
